--- a/index.html
+++ b/index.html
@@ -1,1 +1,140 @@
 index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>PG3D Ultimate 2026</title>
+
+<style>
+:root{
+--bg-dark:#0f0f1a;
+--bg-light:#ffffff;
+--text-dark:#ffffff;
+--text-light:#000000;
+--neon:#00f7ff;
+}
+
+body{
+margin:0;
+font-family:Arial, sans-serif;
+transition:0.3s;
+}
+
+body.dark{
+background:var(--bg-dark);
+color:var(--text-dark);
+}
+
+body.light{
+background:var(--bg-light);
+color:var(--text-light);
+}
+
+header{
+padding:15px;
+text-align:center;
+font-size:22px;
+font-weight:bold;
+}
+
+.neon{
+color:var(--neon);
+text-shadow:0 0 10px var(--neon),
+0 0 20px var(--neon),
+0 0 40px var(--neon);
+}
+
+.toggle{
+position:fixed;
+top:10px;
+right:10px;
+padding:8px 12px;
+border:none;
+border-radius:20px;
+cursor:pointer;
+}
+
+.card{
+margin:15px;
+padding:15px;
+border-radius:20px;
+box-shadow:0 0 15px rgba(0,255,255,0.3);
+background:rgba(255,255,255,0.05);
+backdrop-filter:blur(10px);
+}
+
+button{
+padding:10px;
+border-radius:10px;
+border:none;
+margin-top:10px;
+cursor:pointer;
+}
+</style>
+</head>
+
+<body class="dark">
+
+<header class="neon">PG3D ULTIMATE 2026 🔥</header>
+
+<button class="toggle" onclick="toggleMode()">Dark/Light</button>
+
+<div class="card">
+<h3>AI Loadout Assistant 🤖</h3>
+<input type="text" id="question" placeholder="Ask best weapon 2026..." style="width:100%;padding:8px;border-radius:10px;">
+<button onclick="askAI()">Ask</button>
+<p id="answer"></p>
+</div>
+
+<div class="card">
+<h3>Weapon Database 📦</h3>
+<button onclick="loadWeapons()">Load Weapons</button>
+<div id="weapons"></div>
+</div>
+
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+
+/* BURAYA KENDİ FIREBASE CONFIG'İNİ YAPIŞTIR */
+const firebaseConfig = {
+apiKey: "XXXX",
+authDomain: "XXXX",
+projectId: "XXXX",
+storageBucket: "XXXX",
+messagingSenderId: "XXXX",
+appId: "XXXX"
+};
+
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
+
+window.loadWeapons = async function(){
+const querySnapshot = await getDocs(collection(db,"weapons"));
+let html="";
+querySnapshot.forEach(doc=>{
+let w = doc.data();
+html += `<div class="card">
+<b>${w.name}</b><br>
+Damage: ${w.damage}<br>
+Fire Rate: ${w.fireRate}<br>
+Special: ${w.special}
+</div>`;
+});
+document.getElementById("weapons").innerHTML = html;
+}
+
+window.askAI = async function(){
+let q = document.getElementById("question").value;
+document.getElementById("answer").innerText = "AI response will be connected next step 🔥";
+}
+
+window.toggleMode = function(){
+document.body.classList.toggle("dark");
+document.body.classList.toggle("light");
+}
+</script>
+
+</body>
+  </html>
