Add Load Weapons button and weapon list div

--- a/index.html
+++ b/index.html
@@ -136,5 +136,6 @@ document.body.classList.toggle("light");
 }
 </script>
 
-</body>
+</body><button id="loadBtn">Load Weapons</button>
+<div id="weapon-list"></div>
   </html>
