--- a/index.html
+++ b/index.html
@@ -5,26 +5,80 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PG3D 2026 Ultimate</title>
   <style>
-    body { font-family: Arial; background-color: #121212; color: #fff; margin: 0; padding: 0; }
-    header { padding: 15px; text-align: center; background: #0ff; color: #000; font-size: 24px; font-weight: bold; }
-    .container { padding: 20px; }
-    button { padding: 10px 20px; margin-bottom: 15px; background: #0ff; color: #000; border: none; border-radius: 5px; cursor: pointer; }
-    .item-card { padding: 10px; margin: 5px 0; border: 1px solid #0ff; border-radius: 8px; box-shadow: 0 0 10px #0ff; }
+    /* Temel body ve tema */
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      background: #000;
+      color: #fff;
+      overflow-x: hidden;
+    }
+    /* Yıldızlı arka plan */
+    body::before {
+      content: '';
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 200%;
+      height: 200%;
+      background: radial-gradient(#fff 1px, transparent 1px);
+      background-size: 3px 3px;
+      animation: starMove 100s linear infinite;
+      z-index: -1;
+    }
+    @keyframes starMove {
+      0% { transform: translate(0,0); }
+      100% { transform: translate(-100px,-100px); }
+    }
+    header {
+      padding: 15px;
+      text-align: center;
+      font-size: 24px;
+      font-weight: bold;
+      color: #0ff;
+      text-shadow: 0 0 10px #0ff;
+    }
+    .container {
+      padding: 20px;
+    }
+    button {
+      padding: 10px 20px;
+      margin-bottom: 15px;
+      background: #0ff;
+      color: #000;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-weight: bold;
+      box-shadow: 0 0 10px #0ff;
+    }
+    .item-card {
+      padding: 10px;
+      margin: 5px 0;
+      border: 1px solid #0ff;
+      border-radius: 8px;
+      box-shadow: 0 0 10px #0ff;
+      background: rgba(0,0,0,0.4);
+    }
+    /* Dark/Light toggle */
+    .dark-mode { background: #000; color: #fff; }
+    .light-mode { background: #fff; color: #000; }
   </style>
 </head>
-<body>
-  <header>PG3D 2026 Ultimate</header>
+<body class="dark-mode">
+  <header>PG3D 2026 Ultimate 🔥</header>
   <div class="container">
     <button id="loadBtn">Load Weapons</button>
     <div id="weapon-list"></div>
+    <button id="toggleTheme">Toggle Dark/Light</button>
   </div>
 
-  <!-- JS Kodunu En Alta Ekliyoruz -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
     import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
 
-    // Firestore config (senin mevcut)
+    // Firestore config
     const firebaseConfig = {
       apiKey: "AIzaSyCYlrHvFLCZ1NxokDacDXWOHtzR3_HXJ_A",
       authDomain: "pg3d-ultimate-2026.firebaseapp.com",
@@ -37,6 +91,7 @@
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
 
+    // Load Weapons
     async function loadWeapons() {
       try {
         const weaponsCol = collection(db, "weapons");
@@ -48,7 +103,7 @@
           const w = doc.data();
           const el = document.createElement("div");
           el.className = "item-card";
-          el.textContent = `Name: ${w.name} | Damage: ${w.damage || "-"} | Speed: ${w.speed || "-"}`;
+          el.textContent = `Name: ${w.name} | Damage: ${w.damage || "-"} | Speed: ${w.speed || "-"} | FireRate: ${w.fireRate || "-"} | Range: ${w.range || "-"}`;
           listDiv.appendChild(el);
         });
 
@@ -60,6 +115,18 @@
     }
 
     document.getElementById("loadBtn").addEventListener("click", loadWeapons);
+
+    // Dark/Light toggle
+    document.getElementById("toggleTheme").addEventListener("click", () => {
+      const body = document.body;
+      if(body.classList.contains("dark-mode")) {
+        body.classList.remove("dark-mode");
+        body.classList.add("light-mode");
+      } else {
+        body.classList.remove("light-mode");
+        body.classList.add("dark-mode");
+      }
+    });
   </script>
 </body>
 </html>
