--- a/index.html
+++ b/index.html
@@ -1,166 +1,361 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>PG3D 2026 Ultimate Hub</title>
-<style>
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  background: #000;
-  color: #fff;
-  overflow-x: hidden;
-}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PG3D ULTIMATE 2026 | Next-Gen Gaming</title>
+    
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-/* Yıldızlı arka plan */
-body::before {
-  content: '';
-  position: fixed;
-  top: 0; left: 0;
-  width: 200%; height: 200%;
-  background: radial-gradient(#fff 1px, transparent 1px);
-  background-size: 3px 3px;
-  animation: starMove 100s linear infinite;
-  z-index: -1;
-}
-@keyframes starMove {
-  0% { transform: translate(0,0); }
-  100% { transform: translate(-100px,-100px); }
-}
+    <style>
+        :root {
+            --primary: #00f2ff;
+            --secondary: #7000ff;
+            --accent: #ff00c8;
+            --bg-deep: #020205;
+            --glass: rgba(255, 255, 255, 0.05);
+            --border: rgba(255, 255, 255, 0.1);
+        }
 
-header {
-  padding: 20px;
-  text-align: center;
-  font-size: 28px;
-  color: #0ff;
-  text-shadow: 0 0 10px #0ff;
-}
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            cursor: default;
+        }
 
-.container { padding: 20px; }
-button {
-  padding: 10px 20px;
-  margin: 5px 0;
-  background: #0ff;
-  color: #000;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-weight: bold;
-  box-shadow: 0 0 10px #0ff;
-}
+        body {
+            background-color: var(--bg-deep);
+            color: #fff;
+            font-family: 'Poppins', sans-serif;
+            overflow-x: hidden;
+        }
 
-.item-card {
-  padding: 10px;
-  margin: 5px 0;
-  border: 1px solid #0ff;
-  border-radius: 8px;
-  box-shadow: 0 0 10px #0ff;
-  background: rgba(0,0,0,0.4);
-}
+        /* --- Starfield Canvas --- */
+        #starfield {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            background: radial-gradient(circle at center, #0a0a1a 0%, #020205 100%);
+        }
 
-.dark-mode { background: #000; color: #fff; }
-.light-mode { background: #fff; color: #000; }
+        /* --- Navigation --- */
+        nav {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            padding: 25px 8%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            z-index: 1000;
+            background: rgba(0, 0, 0, 0.3);
+            backdrop-filter: blur(15px);
+            border-bottom: 1px solid var(--border);
+        }
 
-</style>
+        .logo {
+            font-family: 'Orbitron', sans-serif;
+            font-weight: 900;
+            font-size: 1.8rem;
+            letter-spacing: 3px;
+            background: linear-gradient(90deg, var(--primary), var(--secondary));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            text-shadow: 0 0 20px rgba(0, 242, 255, 0.3);
+        }
+
+        .nav-links a {
+            color: #fff;
+            text-decoration: none;
+            margin-left: 30px;
+            font-weight: 600;
+            font-size: 0.9rem;
+            letter-spacing: 1px;
+            transition: 0.3s;
+            text-transform: uppercase;
+        }
+
+        .nav-links a:hover {
+            color: var(--primary);
+            text-shadow: 0 0 10px var(--primary);
+        }
+
+        /* --- Hero Section --- */
+        .hero {
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            padding: 0 20px;
+        }
+
+        .hero-title {
+            font-family: 'Orbitron', sans-serif;
+            font-size: clamp(3rem, 10vw, 6rem);
+            font-weight: 900;
+            line-height: 1;
+            margin-bottom: 20px;
+            animation: glow 3s infinite alternate;
+        }
+
+        @keyframes glow {
+            from { text-shadow: 0 0 10px var(--primary), 0 0 20px var(--secondary); }
+            to { text-shadow: 0 0 20px var(--primary), 0 0 40px var(--secondary), 0 0 60px var(--accent); }
+        }
+
+        .hero-subtitle {
+            font-size: 1.2rem;
+            color: rgba(255, 255, 255, 0.7);
+            max-width: 700px;
+            letter-spacing: 2px;
+            margin-bottom: 40px;
+        }
+
+        .cta-btn {
+            padding: 18px 45px;
+            font-family: 'Orbitron', sans-serif;
+            font-weight: bold;
+            text-decoration: none;
+            color: #fff;
+            background: linear-gradient(45deg, var(--secondary), var(--accent));
+            border-radius: 50px;
+            box-shadow: 0 10px 30px rgba(112, 0, 255, 0.4);
+            transition: 0.4s;
+            border: none;
+            cursor: pointer;
+            text-transform: uppercase;
+        }
+
+        .cta-btn:hover {
+            transform: scale(1.1) translateY(-5px);
+            box-shadow: 0 15px 40px rgba(255, 0, 200, 0.6);
+        }
+
+        /* --- Content Sections --- */
+        section {
+            padding: 100px 10%;
+            position: relative;
+        }
+
+        .section-header {
+            text-align: center;
+            margin-bottom: 80px;
+        }
+
+        .section-header h2 {
+            font-family: 'Orbitron', sans-serif;
+            font-size: 3rem;
+            color: var(--primary);
+            margin-bottom: 10px;
+        }
+
+        /* --- Grid System --- */
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 30px;
+        }
+
+        .card {
+            background: var(--glass);
+            padding: 40px;
+            border-radius: 20px;
+            border: 1px solid var(--border);
+            backdrop-filter: blur(10px);
+            transition: 0.4s;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .card:hover {
+            background: rgba(255, 255, 255, 0.1);
+            border-color: var(--primary);
+            transform: translateY(-10px);
+        }
+
+        .card i {
+            font-size: 3rem;
+            margin-bottom: 20px;
+            background: linear-gradient(45deg, var(--primary), var(--secondary));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        .card h3 {
+            font-family: 'Orbitron', sans-serif;
+            margin-bottom: 15px;
+            color: #fff;
+        }
+
+        /* --- Footer --- */
+        footer {
+            padding: 80px 10% 40px;
+            background: rgba(0, 0, 0, 0.8);
+            border-top: 1px solid var(--border);
+            text-align: center;
+        }
+
+        .social-icons a {
+            font-size: 1.5rem;
+            color: #fff;
+            margin: 0 15px;
+            transition: 0.3s;
+        }
+
+        .social-icons a:hover {
+            color: var(--primary);
+            transform: scale(1.3);
+        }
+
+        .copyright {
+            margin-top: 40px;
+            font-size: 0.8rem;
+            color: rgba(255, 255, 255, 0.4);
+            letter-spacing: 2px;
+        }
+
+        /* --- Scroll Animation --- */
+        .reveal {
+            opacity: 0;
+            transform: translateY(30px);
+            transition: 1s all ease;
+        }
+
+        .reveal.active {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+    </style>
 </head>
-<body class="dark-mode">
-<header>PG3D 2026 Ultimate Hub</header>
-<div class="container">
-  <button id="loadWeaponsBtn">Load Weapons</button>
-  <button id="loadArmorsBtn">Load Armors</button>
-  <button id="loadMasksBtn">Load Masks</button>
-  <button id="loadEquipmentBtn">Load Equipment</button>
-  <button id="loadGemsBtn">Load Gems</button>
-  <button id="aiLoadoutBtn">AI Loadout</button>
-  <button id="toggleTheme">Toggle Dark/Light</button>
-  <div id="itemsContainer"></div>
-</div>
+<body>
 
-<script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
+    <canvas id="starfield"></canvas>
 
-// FIREBASE CONFIG
-const firebaseConfig = {
-  apiKey: "AIzaSyCYlrHvFLCZ1NxokDacDXWOHtzR3_HXJ_A",
-  authDomain: "pg3d-ultimate-2026.firebaseapp.com",
-  projectId: "pg3d-ultimate-2026",
-  storageBucket: "pg3d-ultimate-2026.appspot.com",
-  messagingSenderId: "903222763332",
-  appId: "1:903222763332:web:ad69029e9dd9f550508111"
-};
+    <nav>
+        <div class="logo">PG3D ULTIMATE</div>
+        <div class="nav-links">
+            <a href="#home">Core</a>
+            <a href="#features">Tech</a>
+            <a href="#vision">Vision</a>
+            <a href="https://enespg3d.github.io/pg3d-ultimate-2026/">Live Site</a>
+        </div>
+    </nav>
 
-const app = initializeApp(firebaseConfig);
-const db = getFirestore(app);
+    <section class="hero" id="home">
+        <h1 class="hero-title">ENESP<span style="color:var(--primary)">G3D</span></h1>
+        <p class="hero-subtitle">Engineering the ultimate digital ecosystem of 2026. Higher performance, deeper immersion, absolute dominance.</p>
+        <a href="#features" class="cta-btn">Initiate Protocol</a>
+    </section>
 
-const itemsContainer = document.getElementById("itemsContainer");
+    <section id="features">
+        <div class="section-header reveal">
+            <h2>SYSTEM SPECS</h2>
+            <p>Built for those who demand perfection.</p>
+        </div>
+        <div class="grid">
+            <div class="card reveal">
+                <i class="fas fa-microchip"></i>
+                <h3>Quantum Logic</h3>
+                <p>Powered by advanced algorithms that predict user intent before the first click.</p>
+            </div>
+            <div class="card reveal">
+                <i class="fas fa-rocket"></i>
+                <h3>Warp Speed</h3>
+                <p>Zero latency infrastructure deployed via GitHub Pages for global accessibility.</p>
+            </div>
+            <div class="card reveal">
+                <i class="fas fa-user-shield"></i>
+                <h3>Void Security</h3>
+                <p>Encryption levels that make your data invisible to external threats.</p>
+            </div>
+        </div>
+    </section>
 
-// Generic Load function
-async function loadCollection(collectionName) {
-  try {
-    const colRef = collection(db, collectionName);
-    const snapshot = await getDocs(colRef);
-    itemsContainer.innerHTML = "";
-    snapshot.docs.forEach(doc => {
-      const data = doc.data();
-      const el = document.createElement("div");
-      el.className = "item-card";
-      el.textContent = Object.entries(data).map(([k,v]) => `${k}: ${v}`).join(" | ");
-      itemsContainer.appendChild(el);
-    });
-  } catch(e) {
-    console.error("Error loading " + collectionName, e);
-    alert("Failed to load " + collectionName);
-  }
-}
+    <section id="vision" style="text-align: center;">
+        <div class="card reveal" style="max-width: 900px; margin: 0 auto; background: linear-gradient(rgba(112,0,255,0.1), rgba(0,242,255,0.1));">
+            <h2 style="font-family: 'Orbitron'; color: var(--accent);">THE 2026 VISION</h2>
+            <p style="font-size: 1.2rem; margin: 20px 0;">"The future isn't something we wait for; it's something we code." PG3D Ultimate is a testament to the evolution of the web—a place where gaming aesthetics meet professional-grade architecture.</p>
+            <div style="display: flex; justify-content: space-around; margin-top: 30px;">
+                <div><h2 style="color: var(--primary);">99%</h2><p>Stability</p></div>
+                <div><h2 style="color: var(--primary);">2026</h2><p>Tech Ready</p></div>
+                <div><h2 style="color: var(--primary);">∞</h2><p>Scalability</p></div>
+            </div>
+        </div>
+    </section>
 
-// Buttons
-document.getElementById("loadWeaponsBtn").addEventListener("click", ()=>loadCollection("weapons"));
-document.getElementById("loadArmorsBtn").addEventListener("click", ()=>loadCollection("armors"));
-document.getElementById("loadMasksBtn").addEventListener("click", ()=>loadCollection("masks"));
-document.getElementById("loadEquipmentBtn").addEventListener("click", ()=>loadCollection("equipment"));
-document.getElementById("loadGemsBtn").addEventListener("click", ()=>loadCollection("gems"));
+    <footer>
+        <div class="social-icons">
+            <a href="#"><i class="fab fa-discord"></i></a>
+            <a href="#"><i class="fab fa-github"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+        </div>
+        <p class="copyright">DESIGNED BY ENESPG3D &copy; 2026 | ALL SYSTEMS OPERATIONAL</p>
+    </footer>
 
-// AI Loadout
-document.getElementById("aiLoadoutBtn").addEventListener("click", async () => {
-  try {
-    const weapons = (await getDocs(collection(db, "weapons"))).docs;
-    const armors = (await getDocs(collection(db, "armors"))).docs;
-    const masks = (await getDocs(collection(db, "masks"))).docs;
-    const equipment = (await getDocs(collection(db, "equipment"))).docs;
-    const gems = (await getDocs(collection(db, "gems"))).docs;
+    <script>
+        /* --- STARFIELD LOGIC --- */
+        const canvas = document.getElementById('starfield');
+        const ctx = canvas.getContext('2d');
+        let stars = [];
+        const numStars = 400;
 
-    function random(docArray){ return docArray[Math.floor(Math.random()*docArray.length)].data(); }
+        function initCanvas() {
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
+            stars = [];
+            for (let i = 0; i < numStars; i++) {
+                stars.push({
+                    x: Math.random() * canvas.width,
+                    y: Math.random() * canvas.height,
+                    size: Math.random() * 2,
+                    speed: Math.random() * 0.5 + 0.1
+                });
+            }
+        }
 
-    const aiSelection = [
-      random(weapons),
-      random(armors),
-      random(masks),
-      random(equipment),
-      random(gems)
-    ];
+        function drawStars() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            ctx.fillStyle = '#fff';
+            stars.forEach(star => {
+                ctx.beginPath();
+                ctx.arc(star.x, star.y, star.size, 0, Math.PI * 2);
+                ctx.fill();
+                star.y += star.speed;
+                if (star.y > canvas.height) star.y = 0;
+            });
+            requestAnimationFrame(drawStars);
+        }
 
-    itemsContainer.innerHTML = "";
-    aiSelection.forEach(item=>{
-      const el = document.createElement("div");
-      el.className = "item-card";
-      el.textContent = Object.entries(item).map(([k,v]) => `${k}: ${v}`).join(" | ");
-      itemsContainer.appendChild(el);
-    });
+        window.addEventListener('resize', initCanvas);
+        initCanvas();
+        drawStars();
 
-    alert("AI Loadout generated!");
-  } catch(e) {
-    console.error("Error generating AI Loadout", e);
-    alert("Failed to generate AI Loadout");
-  }
-});
+        /* --- REVEAL ON SCROLL --- */
+        function reveal() {
+            var reveals = document.querySelectorAll(".reveal");
+            for (var i = 0; i < reveals.length; i++) {
+                var windowHeight = window.innerHeight;
+                var elementTop = reveals[i].getBoundingClientRect().top;
+                var elementVisible = 150;
+                if (elementTop < windowHeight - elementVisible) {
+                    reveals[i].classList.add("active");
+                }
+            }
+        }
+        window.addEventListener("scroll", reveal);
 
-// Dark/Light toggle
-document.getElementById("toggleTheme").addEventListener("click", ()=>{
-  document.body.classList.toggle("dark-mode");
-  document.body.classList.toggle("light-mode");
-});
-</script>
+        // Initial check
+        reveal();
+    </script>
 </body>
-  </html>
+              </html>
+              
